# pinochet-analyze-50

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .sqlfluff  .sqlfluff.fast  AGENTS.md  Makefile  README.md  docker-compose.dbt.yml  docker-compose.directus.yml  docker-compose.fastapi.yml  docker-compose.metabase.yml  docker-compose.nw_pinochet.yml  docker-compose.ontop.yml  docker-compose.postgis.yml  docker-compose.postgrest.yml  docker-compose.streamlit.yml  docker-compose.superset-non-dev.yml  docker-compose.yml  example.env  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.devcontainer/: devcontainer.json  docker-compose-extends-fastapi.yml
.github/: 404.html  pull_request_template.md
.github/assets/: gh-root.html
.github/workflows/: dbt-docs-generate.yml
.trunk/: trunk.yaml
datasets/pinochet-rettig/: Makefile  README.md  dataset-pinochet-rettig.jsonld  mapping.yarrrml.yml  rules.rml.ttl
datasets/pinochet-rettig/data/: stg_pinochet__base.csv
datasets/pinochet-rettig/scripts/: prepare.py
datasets/pinochet-rettig/semantics/: .gitignore  mapping.protege.obda  mapping.protege.portal.toml  mapping.protege.properties  mapping.protege.q  mapping.protege.ttl
datasets/pinochet-rettig/yarrrml-legacy/scripts/: prepare.py
dbt_pinochet/: dbt_project.yml  package-lock.yml  packages.yml
dbt_pinochet/models/datasets/: pinochet.sql
dbt_pinochet/models/datasets/api/: _api__models.yml  api_pinochet__event.sql  api_pinochet__event_location_association.sql  api_pinochet__location.sql  api_pinochet__victim.sql
dbt_pinochet/models/datasets/marts/: dm_pinochet__base.sql
dbt_pinochet/models/datasets/pinochet/: t_pinochet__construct_geometries.sql  t_pinochet__pivot_fields.sql  t_pinochet__renamed_and_cast.sql  t_pinochet__split_fields.sql  t_pinochet__unnest_locations.sql  t_pinochet__unpivot_geometries.sql
dbt_pinochet/models/datasets/raw/: _raw__models.yml  (+1 more)
dbt_pinochet/pre/: manifest.json  partial_parse.msgpack
dbt_pinochet/profiles/: .user.yml  profiles.yml
dbt_pinochet/seeds/: schema.yaml
graph-models/: pyproject.toml
graph-models/notebooks/: 01-networkx-model.ipynb
graph-models/resources/: api.api_pinochet__event.csv  api.api_pinochet__event.feather  api.api_pinochet__event_location_association.csv  api.api_pinochet__event_location_association.feather  api.api_pinochet__location.csv  api.api_pinochet__location.feather  api.api_pinochet__location_and_events.csv  api.api_pinochet__location_and_events.feather  api.api_pinochet__victim.csv  api.api_pinochet__victim.feather  api.stg_pinochet__base.feather  api.stg_pinochet__paths.csv  api.stg_pinochet__paths.feather
graph-models/scripts/: download-tables.py
pinochet-rettig-dbt/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  ruff.toml
pinochet-rettig-dbt/dbt_pinochet/: dbt_project.yml  package-lock.yml  packages.yml
pinochet-rettig-dbt/dbt_pinochet/models/datasets/api/: api_pinochet__location_and_events.sql
pinochet-rettig-dbt/dbt_pinochet/models/datasets/staging/: _staging__models.yml  stg_pinochet__paths.sql
pinochet-rettig-dbt/dbt_pinochet/profiles/: profiles.yml
pinochet-rettig-dbt/dbt_pinochet/seeds/: _pinochet__seeds.yaml
pinochet-rettig-fastapi/: Dockerfile  README.md  example.env  prestart.sh  pyproject.toml  ruff.toml
pinochet-rettig-fastapi/alembic/: env.py
pinochet-rettig-fastapi/src/pinochet/: initial_data.py  settings.py
pinochet-rettig-fastapi/src/pinochet/api/: deps.py
pinochet-rettig-fastapi/src/pinochet/api/core/: __init__.py  security.py
pinochet-rettig-fastapi/src/pinochet/api/v1/endpoints/: auth.py  events.py  locations.py  welcome.py
pinochet-rettig-fastapi/src/pinochet/crud/: __init__.py  base.py
pinochet-rettig-fastapi/src/pinochet/schemas/: __init__.py  location.py  victim.py
pinochet-rettig-fastapi/tests/test_api/: test_events.py
pinochet-rettig-fastapi/tests/test_diagnostics/: test_smoke.py
pinochet-rettig-linked-data/: README.md
pinochet-rettig-linked-data/ontop/input/: mapping.protege.properties.example
pinochet-rettig-streamlit/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
pinochet-rettig-streamlit/src/: app.py
services/dbt-deps-image/: pyproject.toml
services/metabase/secrets/: .gitignore
services/ontop/: .gitignore  Dockerfile  fly.toml
services/ontop/input/: mapping.protege.obda  mapping.protege.properties.example
services/ontop/semantics/: mapping.protege.properties.example
services/pinochet-api/: .dockerignore  Dockerfile  Makefile  alembic.ini  fly.toml  prestart.sh  pyproject.toml
services/pinochet-api/alembic/: env.py  script.py.mako
services/pinochet-api/alembic/versions/: 20240302_1709426610_44e88ca37c64_first_migration.py  20240302_1709427186_4101c905126c_create_daniel_lopez_as_user.py
services/pinochet-api/src/pinochet/: backend_pre_start.py  base.py  cli.py  db.py  main.py  models.py  settings.py
services/pinochet-api/src/pinochet/api/: deps.py
services/pinochet-api/src/pinochet/api/core/: security.py
services/pinochet-api/src/pinochet/api/v1/: api.py
services/pinochet-api/src/pinochet/api/v1/endpoints/: auth.py  events.py  graphql.py  locations.py  users.py  victims.py
services/pinochet-api/src/pinochet/api/v1/graphql/: __init__.py  auth.py  context.py  schema.py
services/pinochet-api/src/pinochet/crud/: base.py  crud_user.py
services/pinochet-api/src/pinochet/database/: models.py  session.py  time.py
services/pinochet-api/src/pinochet/schemas/: __init__.py  common.py  event.py  location.py  user.py  victim.py
services/pinochet-api/tests/: conftest.py
services/pinochet-api/tests/test_api/: test_events.py  test_geo_queries.py  test_locations.py  test_victims.py
services/pinochet-api/tests/test_diagnostics/: test_smoke.py
services/postgis/: fly.toml
services/postgis/docker-entrypoint-initdb.d/: create_postgrest_roles.sh
services/postgrest/scripts/: get_from_table.sh
services/streamlit/: Dockerfile  requirements.txt
services/streamlit/src/: app.py
(+7 files in other folders)
