[tool.poetry]
authors = ["Diego Quintana <daquintanav@gmail.com>"]
description = "Utilities for analyzing the pinochet dataset"
license = "MIT"
name = "pinochet-rettig-main"
readme = "README.md"
version = "1.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.8.2"
elementary-data = "^0.13.2"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.2.5"
sqlfluff-templater-dbt = "^3.2.5"
black = "^23.9.1"
coverage = "^7.3.0"
git-changelog = "^2.1.0"
ipykernel = "^6.25.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
ruff = "^0.0.284"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
