[project]
name = "pinochet-rettig-dbt"
version = "0.1.0"
description = "dbt project for the Pinochet-Rettig dataset"
authors = [{ name = "Diego Quintana", email = "daquintanav@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"

dependencies = [
    "dbt-postgres>=1.8.2,<2",
    "elementary-data>=0.13.2,<1",
]

[dependency-groups]
dev = [
    "shandy-sqlfmt[jinjafmt]>=0.21.0,<0.22",
    "sqlfluff-templater-dbt>=2.3.5,<3",
]

[tool.uv]
default-groups = "all"
package = false

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
