[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "Diego Quintana", email = "daquintanav@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.139.0,<0.140",
    "uvicorn[standard]>=0.50.0,<0.51",
    "sqlalchemy>=2.0.51,<2.1",
    "alembic>=1.18.5,<1.19",
    "python-jose[cryptography]>=3.5.0,<3.6",
    "typer>=0.26.8,<0.27",
    "psycopg2-binary>=2.9.12,<2.10",
    "tenacity>=9.1.4,<10",
    "strawberry-graphql[debug-server,fastapi]>=0.320.1,<0.321",
    "passlib[bcrypt]>=1.7.4,<1.8",
    "loguru>=0.7.3,<0.8",
    "fastapi-healthz>=1.3.3,<1.4",
    "python-decouple>=3.8,<3.9",
]

[project.scripts]
pinochet-api-cli = "pinochet.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.1.5,<0.2",
    "pytest>=7.4.3,<8",
    "ipykernel>=6.29.4,<7",
    "pandas>=2.2.2,<3",
    "httpx>=0.27.0,<0.28",
    "sqlalchemy-model-faker>=0.0.5,<0.0.6",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/pinochet"]

[tool.hatch.build.targets.wheel]
include = ["src/pinochet"]

[tool.hatch.build.targets.wheel.sources]
"src/pinochet" = "pinochet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
