[project]
name = "pinochet-rettig-streamlit"
version = "1.0.0rc1"
description = "Small streamlit application to analyze the pinochet dataset"
authors = [{ name = "Diego Quintana", email = "daquintanav@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "geopandas>=0.13.2",
    "numpy>=1.25.2,<3",
    "pandas>=2.0.3,<3",
    "psycopg2-binary>=2.9.7,<3",
    "pydeck>=0.8.0,<0.9",
    "python-decouple>=3.8,<4",
    "shapely>=2.0.1,<3",
    "sqlalchemy>=2.0.20,<3",
    "streamlit>=1.26.0,<2",
]



[dependency-groups]
dev = [
    "black>=23.9.1,<24",
    "coverage>=7.3.0,<8",
    "git-changelog>=2.1.0,<3",
    "ipykernel>=6.25.1,<7",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.4.0,<8",
    "ruff>=0.0.284,<0.0.285",
    "sparqlwrapper>=2.0.0,<3",
]

[tool.uv]
default-groups = "all"
package = false

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.poetry_bumpversion.replacements]]
files = ["streamlit_app.py"]
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'

[[tool.poetry_bumpversion.replacements]]
files = ["VERSION"]
replace = '{new_version}'
search = '{current_version}'
