[tool.poetry]
name = "dbt-image"
version = "0.1.0"
description = ""
authors = ["Diego Quintana <daquintanav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.7.3"
elementary-data = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
